# mccli

./: .buildinfo  .bumpversion.cfg  .gitattributes  .gitignore  README.md  README.rst  api.html  genindex.html  index.html  installation.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test_server.html  tox.ini  usage.html
.doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  intro.doctree  test_server.doctree  usage.doctree
.doctrees/api/cli/: info.doctree  mccli.doctree  scp.doctree  sftp.doctree  ssh.doctree
.doctrees/api/utils/: mccli.click_utils.doctree  mccli.info_utils.doctree  mccli.init_utils.doctree  mccli.motley_cue_client.doctree  mccli.scp_utils.doctree  mccli.ssh_wrapper.doctree
.doctrees/usage/: at_sources.doctree  misc.doctree  ssh-options.doctree  usage_info.doctree  usage_scp.doctree
.github/workflows/: ci.yml  publish-docs.yml  publish-to-pypi.yml
.gitlab-ci-scripts/: set-prerel-version  set-prerelease-version.sh
_sources/: api.rst.txt  index.rst.txt  test_server.rst.txt  usage.rst.txt
_sources/api/cli/: info.rst.txt  scp.rst.txt  sftp.rst.txt
_sources/api/utils/: mccli.info_utils.rst.txt  mccli.init_utils.rst.txt  mccli.scp_utils.rst.txt  mccli.ssh_wrapper.rst.txt
_sources/usage/: at_sources.rst.txt  scp.rst.txt
_static/: alabaster.css
api/cli/: cli.html  info.html  mccli.html  scp.html  sftp.html  ssh.html
api/utils/: mccli.click_utils.html  mccli.info_utils.html  mccli.init_utils.html  mccli.motley_cue_client.html  mccli.scp_utils.html  mccli.ssh_wrapper.html
doc/: Makefile  publish.sh
doc/source/: api.rst  conf.py  index.rst  installation.rst  intro.rst  requirements.txt  usage.rst
doc/source/api/cli/: info.rst  mccli.rst  scp.rst  sftp.rst  ssh.rst
doc/source/api/utils/: mccli.click_utils.rst  mccli.motley_cue_client.rst
doc/source/usage/: info.rst  misc.rst  ssh-options.rst  usage_info.rst  usage_scp.rst
mc_ssh/: __init__.py  click_utils.py  init_utils.py  interactive.py  logging.py  mccli.py  motley_cue_client.py  scp_utils.py  ssh_service.py  ssh_wrapper.py  utils.py  version.py
mccli/: __init__.py  _version.py  click_utils.py  exceptions.py  info_utils.py  init_utils.py  logging.py  mccli.py  motley_cue_client.py  scp_utils.py  ssh_wrapper.py  version.py
usage/: at_sources.html  info.html  misc.html  scp.html  ssh-options.html  usage_info.html  usage_scp.html
