[metadata]
name = mc_ssh
summary = SSH client wrapper for SSH with access token
description-file = README.md
description-content-type = text/markdown; charset=UTF-8

author = Diana Gudu
author-email = gudu@kit.edu

home-page = https://github.com/dianagudu/mc_ssh
project_urls =
    Bug Tracker = https://github.com/dianagudu/mc_ssh/issues
    Documentation = https://github.com/dianagudu/mc_ssh/blob/main/README.md

license = MIT 
license_file = LICENSE

classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: System :: Systems Administration
    Topic :: System :: Systems Administration :: Authentication/Directory  
    Topic :: Utilities

# This creates a binary <bin-name> 
# that calls the function in <dir>/<module>:<function>
[options.entry_points]
console_scripts =
    mccli = mc_ssh.mccli:cli

[bdist_wheel]
universal = 1

[options]
install_requires =
    paramiko
    scp
    liboidcagent
    requests
    Click
    click-option-group
package_dir=
    =.
packages=find:
