[metadata]
name = mccli
summary = SSH client wrapper for SSH with access token
description = SSH client wrapper for SSH with access token
long_description = file: README.rst
# description_file = README.rst
# description_content_type = text/x-rst; charset=UTF-8

author = Diana Gudu
author_email = gudu@kit.edu

home_page = https://github.com/dianagudu/mccli
project_urls =
    Bug Tracker = https://github.com/dianagudu/mccli/issues
    Documentation = https://mccli.readthedocs.io

license = MIT 
license_files = [LICENSE]

classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: System :: Systems Administration
    Topic :: System :: Systems Administration :: Authentication/Directory
    Topic :: Utilities

# This creates a binary <bin-name> 
# that calls the function in <dir>/<module>:<function>
[options.entry_points]
console_scripts =
    mccli = mccli.mccli:cli

[bdist_wheel]
universal = 1

[options]
install_requires =
    pexpect
    liboidcagent
    requests
    requests-cache
    click>=8.0.0
    click-option-group
    click-logging
    rfc3986
    flaat>=1.0.0
